2010-09-22  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (global-map): Setup dired-x.

	* init-misc.el (require): Add browse-kill-ring.

	* init-toolbar.el: Add comment and format toolbar item.
	Auto save toolbarshow setting.
	Add remember toolbar.

	* Add lisp/w32-browser.el

2010-09-20  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (dired-mode-hook): Add dired+.

2010-09-19  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el ("folding"): Add toggle-hiding toolbar item.
	Add emms toolbar.

	* init-misc.el: Bind double click to change song in emms.

	* init-toolbar.el: Use emms pop menu instead of toolbar item.

2010-09-16  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Bind [header-line double-mouse-1] to kill-this-buffer.

2010-09-14  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el ("emms-playlist-mode"): Use space to pause.

2010-09-08  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el: Add ibus setting.
	(require): Add scim-bridge setting.

2010-09-05  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (emms-dir-tree): Improve emms setting.

	* init-toolbar.el: Remove semantic-impl-toggle toolbar item.
	Setup emms toolbar item.

	* init-misc.el (emms): Set autoload for emms.

2010-08-26  Meteor Liu  <meteor1113@gmail.com>

	* .emacs: Update to support cedet-1.0

2010-08-23  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (format-region): Check whitespace-cleanup.

2010-08-21  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: In default, don't enable whitespace in sql-mode.

2010-08-19  Meteor Liu  <meteor1113@gmail.com>

	* snippets/text-mode/isot: Add.

2010-08-14  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Enable upcase-region and downcase-region only (region-active-p).

2010-08-07  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Disable linum-mode in default because slow.

	* init-misc.el: Add cn-weather.

2010-08-04  Meteor Liu  <meteor1113@gmail.com>
