@@ -1,0 +1,281 @@
+/* XPM */
+static char *remember-destroy_xpm[] = {
+/* width height num_colors chars_per_pixel */
+"    18    18      256            2",
+/* colors */
+"`` c #ffffff",
+"`. c #dededa",
+"`# c #bebeba",
+"`a c #9f9f9d",
+"`b c #a3a39f",
+"`c c #a2a29e",
+"`d c #b1b3b3",
+"`e c #4d4c47",
+"`f c #1f1b0f",
+"`g c #7d7461",
+"`h c #a8aaab",
+"`i c #d3d3ce",
+"`j c #e2e2de",
+"`k c #d8d8d4",
+"`l c #e5e5e0",
+"`m c #383837",
+"`n c #5e5e60",
+"`o c #808082",
+"`p c #7a7a7b",
+"`q c #7b7b7b",
+"`r c #7a7a7a",
+"`s c #8c8e92",
+"`t c #1f1912",
+"`u c #cdad57",
+"`v c #ffdb5c",
+"`w c #472b00",
+"`x c #3a3f4c",
+"`y c #616160",
+"`z c #cececa",
+"`A c #e2e2dd",
+"`B c #575755",
+"`C c #f2f2f2",
+"`D c #feffff",
+"`E c #422c00",
+"`F c #ffee84",
+"`G c #8e5b00",
+"`H c #4d586b",
+"`I c #f5f5f5",
+"`J c #787878",
+"`K c #3d3d3d",
+"`L c #e3e3de",
+"`M c #525251",
+"`N c #dddddd",
+"`O c #fdfdfd",
+"`P c #fefefd",
+"`Q c #51515a",
+"`R c #fcd05e",
+"`S c #dca930",
+"`T c #3c311f",
+"`U c #cfd4de",
+"`V c #c9c9c8",
+"`W c #696968",
+"`X c #000000",
+"`Y c #a6a6a3",
+"`Z c #525252",
+"`0 c #f8f8f8",
+"`1 c #b6c0d3",
+"`2 c #5a3b02",
+"`3 c #ffffa7",
+"`4 c #7e4900",
+"`5 c #485161",
+"`6 c #ebeaeb",
+"`7 c #dbdbda",
+"`8 c #aaaaa6",
+".` c #dcdcdc",
+".. c #fcfcfc",
+".# c #f9f8f8",
+".a c #fbffff",
+".b c #756b5b",
+".c c #d0c28f",
+".d c #f0a216",
+".e c #241b08",
+".f c #c1c3cc",
+".g c #f3f3f2",
+".h c #e9e9e7",
+".i c #fcfcfa",
+".j c #59595a",
+".k c #535352",
+".l c #dcdcdd",
+".m c #f8f8f9",
+".n c #fcfcfe",
+".o c #d6d6d7",
+".p c #d8d5c5",
+".q c #b4b3a4",
+".r c #0a0a0b",
+".s c #222222",
+".t c #272727",
+".u c #1a1a1a",
+".v c #b8b6a8",
+".w c #dad7c7",
+".x c #dcdcdb",
+".y c #f2f2f0",
+".z c #3d424a",
+".A c #d7d5c5",
+".B c #444341",
+".C c #595a5c",
+".D c #d9d9d9",
+".E c #e4e4e4",
+".F c #ededed",
+".G c #d1d1d1",
+".H c #c2c2c2",
+".I c #363638",
+".J c #343331",
+".K c #545452",
+".L c #d9d9da",
+".M c #fcfbfa",
+".N c #a3adc0",
+".O c #cb9b3b",
+".P c #b4b2a4",
+".Q c #5a5a5c",
+".R c #f1f1f1",
+".S c #e5e5e5",
+".T c #e3e3e3",
+".U c #dedede",
+".V c #ebebeb",
+".W c #d5d5d5",
+".X c #121214",
+".Y c #bbb9ab",
+".Z c #d8d8d8",
+".0 c #555658",
+".1 c #9da19c",
+".2 c #0a0a0c",
+".3 c #e6e6e6",
+".4 c #474747",
+".5 c #434343",
+".6 c #f0f0f0",
+".7 c #464646",
+".8 c #292929",
+"#` c #d0d0d0",
+"#. c #a2a2a2",
+"## c #020203",
+"#a c #545453",
+"#b c #d7d7d7",
+"#c c #f6f6f4",
+"#d c #777777",
+"#e c #2a2929",
+"#f c #232323",
+"#g c #444444",
+"#h c #2d2d2d",
+"#i c #bbbbbb",
+"#j c #b5b5b5",
+"#k c #1f1f1f",
+"#l c #555554",
+"#m c #d6d6d6",
+"#n c #e9e9e6",
+"#o c #939392",
+"#p c #414141",
+"#q c #1b1b1b",
+"#r c #d3d3d3",
+"#s c #e0e0e0",
+"#t c #494949",
+"#u c #e3e3e1",
+"#v c #a9a9a9",
+"#w c #b1b1b1",
+"#x c #1d1d1d",
+"#y c #d4d4d0",
+"#z c #c7c7c5",
+"#A c #b6b6b3",
+"#B c #484848",
+"#C c #59584d",
+"#D c #b0b0af",
+"#E c #919191",
+"#F c #0c0c0c",
+"#G c #545454",
+"#H c #d3d3d4",
+"#I c #d5d5d0",
+"#J c #d4d4d1",
+"#K c #d0d0ce",
+"#L c #000102",
+"#M c #a7a7a7",
+"#N c #484849",
+"#O c #efefef",
+"#P c #333334",
+"#Q c #ababab",
+"#R c #000002",
+"#S c #5c5c5a",
+"#T c #f7f7f7",
+"#U c #e7e7e4",
+"#V c #e6e6e3",
+"#W c #b7b5a7",
+"#X c #3f3f41",
+"#Y c #b5b6b4",
+"#Z c #f0eee2",
+"#0 c #b8b8b9",
+"#1 c #aaaaaa",
+"#2 c #b6b6b6",
+"#3 c #6d6d6d",
+"#4 c #1c1d1f",
+"#5 c #bcbaac",
+"#6 c #e7e7e3",
+"#7 c #4a4a48",
+"#8 c #111111",
+"a` c #181819",
+"a. c #1a1a18",
+"a# c #19191a",
+"aa c #4a4947",
+"ab c #414143",
+"ac c #b7b7b8",
+"ad c #b2b2b2",
+"ae c #aeaeae",
+"af c #8e8e8e",
+"ag c #9b9b9b",
+"ah c #1d1d1f",
+"ai c #383735",
+"aj c #0e0e10",
+"ak c #000000",
+"al c #000000",
+"am c #000000",
+"an c #000000",
+"ao c #000000",
+"ap c #000000",
+"aq c #000000",
+"ar c #000000",
+"as c #000000",
+"at c #000000",
+"au c #000000",
+"av c #000000",
+"aw c #000000",
+"ax c #000000",
+"ay c #000000",
+"az c #000000",
+"aA c #000000",
+"aB c #000000",
+"aC c #000000",
+"aD c #000000",
+"aE c #000000",
+"aF c #000000",
+"aG c #000000",
+"aH c #000000",
+"aI c #000000",
+"aJ c #000000",
+"aK c #000000",
+"aL c #000000",
+"aM c #000000",
+"aN c #000000",
+"aO c #000000",
+"aP c #000000",
+"aQ c #000000",
+"aR c #000000",
+"aS c #000000",
+"aT c #000000",
+"aU c #000000",
+"aV c #000000",
+"aW c #000000",
+"aX c #000000",
+"aY c #000000",
+"aZ c #000000",
+"a0 c #000000",
+"a1 c #000000",
+"a2 c #000000",
+"a3 c #000000",
+"a4 c #000000",
+"a5 c #000000",
+"a6 c #000000",
+"a7 c #000000",
+"a8 c #000000",
+/* pixels */
+"````````````````````````````````````",
+"```.`#`a`b`c`c`c`b`d`e`f`g`h`i`j`k``",
+"```l`m`n`o`p`q`r`s`t`u`v`w`x`y`z`A``",
+"```j`B`C`````````D`E`F`G`H`I`J`K`k``",
+"```L`M`N```O`P```Q`R`S`T`U`V`W`X`Y``",
+"```L`Z`N```0```1`2`3`4`5```6`7`K`8``",
+"```L`Z.`...#.a.b.c.d.e.f.g.h.i.j`Y``",
+"```L.k.l.m.n.o``.p.q.r.s.t.u`X.v.w``",
+"```L`Z.x.y``.z.A.B.C.D.E.F.G.H.I.J.w",
+"```L.K.L.M.N.O.P.Q.R.S.T.U.S.V.W.X.Y",
+"```L.K.Z``.0.1.2.Z.3.4.5.6.7.8#`#.##",
+"```L#a#b#c#d#e#f.3.T#g`X.4`X#h#i#j#k",
+"```L#l#m#n#o#p#q#r#s.6.4`X#t#u#v#w#x",
+"```L#l.W#y#z#A#q.W.3#g`X#B`X#C#D#E#F",
+"```L#G#H#I#J#K#L#M.S#N#B#O#h#P#Q`q#R",
+"```j#S#T#U#V#V#W#X#Y#Z#0#`#1#2#3#4#5",
+"``#6#7#8a`a.a#.paaabacadaeafagahai.w",
+"````````````````.p#Waj#x#x#F`X#5.w``"
+};
