@@ -1,0 +1,281 @@
+/* XPM */
+static char *remember-finalize_xpm[] = {
+/* width height num_colors chars_per_pixel */
+"    18    18      256            2",
+/* colors */
+"`` c #ffffff",
+"`. c #dededa",
+"`# c #bebeba",
+"`a c #9f9f9d",
+"`b c #a3a39f",
+"`c c #a2a29e",
+"`d c #b1b3b3",
+"`e c #4d4c47",
+"`f c #1f1b0f",
+"`g c #7d7461",
+"`h c #a8aaab",
+"`i c #d3d3ce",
+"`j c #e2e2de",
+"`k c #d8d8d4",
+"`l c #e5e5e0",
+"`m c #383837",
+"`n c #5e5e60",
+"`o c #808082",
+"`p c #7a7a7b",
+"`q c #7b7b7b",
+"`r c #7a7a7a",
+"`s c #8c8e92",
+"`t c #1f1912",
+"`u c #cdad57",
+"`v c #ffdb5c",
+"`w c #472b00",
+"`x c #3a3f4c",
+"`y c #616160",
+"`z c #cececa",
+"`A c #e2e2dd",
+"`B c #575755",
+"`C c #f2f2f2",
+"`D c #feffff",
+"`E c #422c00",
+"`F c #ffee84",
+"`G c #8e5b00",
+"`H c #4d586b",
+"`I c #f5f5f5",
+"`J c #787878",
+"`K c #3d3d3d",
+"`L c #e3e3de",
+"`M c #525251",
+"`N c #dddddd",
+"`O c #fdfdfd",
+"`P c #fefefd",
+"`Q c #51515a",
+"`R c #fcd05e",
+"`S c #dca930",
+"`T c #3c311f",
+"`U c #cfd4de",
+"`V c #c9c9c8",
+"`W c #696968",
+"`X c #000000",
+"`Y c #a6a6a3",
+"`Z c #525252",
+"`0 c #f8f8f8",
+"`1 c #b6c0d3",
+"`2 c #5a3b02",
+"`3 c #ffffa7",
+"`4 c #7e4900",
+"`5 c #485161",
+"`6 c #ebeaeb",
+"`7 c #dbdbda",
+"`8 c #aaaaa6",
+".` c #dcdcdc",
+".. c #fcfcfc",
+".# c #f9f8f8",
+".a c #fbffff",
+".b c #756b5b",
+".c c #d0c28f",
+".d c #f0a216",
+".e c #241b08",
+".f c #c1c3cc",
+".g c #f3f3f2",
+".h c #e9e9e7",
+".i c #fcfcfa",
+".j c #59595a",
+".k c #535352",
+".l c #dcdcdd",
+".m c #f8f8f9",
+".n c #fcfcfe",
+".o c #d6d6d7",
+".p c #747576",
+".q c #36424b",
+".r c #645652",
+".s c #655955",
+".t c #645552",
+".u c #63534f",
+".v c #645450",
+".w c #615451",
+".x c #3a434b",
+".y c #707473",
+".z c #dcdcdb",
+".A c #f2f2f0",
+".B c #3d424a",
+".C c #525f68",
+".D c #7d9bb5",
+".E c #dc7b6c",
+".F c #e17565",
+".G c #dd7666",
+".H c #d57263",
+".I c #d36b5d",
+".J c #d26758",
+".K c #c4584d",
+".L c #7c99ae",
+".M c #192732",
+".N c #545452",
+".O c #d9d9da",
+".P c #fcfbfa",
+".Q c #a3adc0",
+".R c #cb9b3b",
+".S c #525e67",
+".T c #788f9e",
+".U c #fffdfc",
+".V c #fffffe",
+".W c #758999",
+".X c #1c2731",
+".Y c #d8d8d8",
+".Z c #555658",
+".0 c #9da19c",
+".1 c #535f68",
+".2 c #75899b",
+".3 c #e0dedd",
+".4 c #e2e3e3",
+".5 c #e0e1e1",
+".6 c #dbdad8",
+".7 c #7b8e9d",
+".8 c #16222b",
+"#` c #545453",
+"#. c #d7d7d7",
+"## c #f6f6f4",
+"#a c #777777",
+"#b c #2a2929",
+"#c c #505a67",
+"#d c #718998",
+"#e c #f5f2f1",
+"#f c #f7f7f7",
+"#g c #f6f6f6",
+"#h c #f4f2f0",
+"#i c #798b9b",
+"#j c #172027",
+"#k c #555554",
+"#l c #d6d6d6",
+"#m c #e9e9e6",
+"#n c #939392",
+"#o c #414141",
+"#p c #4d5e67",
+"#q c #798796",
+"#r c #d9d3d0",
+"#s c #dad8d7",
+"#t c #d9d7d5",
+"#u c #d7d6d5",
+"#v c #d9d6d5",
+"#w c #dad8d6",
+"#x c #d5d1ce",
+"#y c #7a8c9b",
+"#z c #1b2022",
+"#A c #d5d5d5",
+"#B c #d4d4d0",
+"#C c #c7c7c5",
+"#D c #b6b6b3",
+"#E c #4a5863",
+"#F c #80a3be",
+"#G c #71889a",
+"#H c #5f7384",
+"#I c #647a8d",
+"#J c #5e7589",
+"#K c #667a8b",
+"#L c #697d8e",
+"#M c #6a7d8d",
+"#N c #91adc4",
+"#O c #0c1419",
+"#P c #545454",
+"#Q c #d3d3d4",
+"#R c #d5d5d0",
+"#S c #d4d4d1",
+"#T c #d0d0ce",
+"#U c #4d5863",
+"#V c #769db9",
+"#W c #5d666d",
+"#X c #abaaa7",
+"#Y c #b4b6b7",
+"#Z c #bdbebf",
+"#0 c #abadab",
+"#1 c #878783",
+"#2 c #354a59",
+"#3 c #99b7d1",
+"#4 c #0b1113",
+"#5 c #5c5c5a",
+"#6 c #e7e7e4",
+"#7 c #e6e6e3",
+"#8 c #4d5a65",
+"a` c #7298b3",
+"a. c #7e8283",
+"a# c #d6d4ce",
+"aa c #332f25",
+"ab c #b8b5b0",
+"ac c #c5c1b9",
+"ad c #cecac5",
+"ae c #364e61",
+"af c #98b3c7",
+"ag c #090d11",
+"ah c #e7e7e3",
+"ai c #4a4a48",
+"aj c #111111",
+"ak c #181819",
+"al c #1a1a18",
+"am c #19191a",
+"an c #303a44",
+"ao c #7599b5",
+"ap c #7b7e7f",
+"aq c #cac7c1",
+"ar c #3b372f",
+"as c #b8b4ac",
+"at c #efede8",
+"au c #efeeec",
+"av c #364d5b",
+"aw c #8fb2cc",
+"ax c #080807",
+"ay c #d9d4c2",
+"az c #11181e",
+"aA c #2a2c2d",
+"aB c #504e4a",
+"aC c #605f5c",
+"aD c #5d5d5b",
+"aE c #646362",
+"aF c #494745",
+"aG c #11181f",
+"aH c #3d505d",
+"aI c #55534c",
+"aJ c #000000",
+"aK c #000000",
+"aL c #000000",
+"aM c #000000",
+"aN c #000000",
+"aO c #000000",
+"aP c #000000",
+"aQ c #000000",
+"aR c #000000",
+"aS c #000000",
+"aT c #000000",
+"aU c #000000",
+"aV c #000000",
+"aW c #000000",
+"aX c #000000",
+"aY c #000000",
+"aZ c #000000",
+"a0 c #000000",
+"a1 c #000000",
+"a2 c #000000",
+"a3 c #000000",
+"a4 c #000000",
+"a5 c #000000",
+"a6 c #000000",
+"a7 c #000000",
+"a8 c #000000",
+/* pixels */
+"````````````````````````````````````",
+"```.`#`a`b`c`c`c`b`d`e`f`g`h`i`j`k``",
+"```l`m`n`o`p`q`r`s`t`u`v`w`x`y`z`A``",
+"```j`B`C`````````D`E`F`G`H`I`J`K`k``",
+"```L`M`N```O`P```Q`R`S`T`U`V`W`X`Y``",
+"```L`Z`N```0```1`2`3`4`5```6`7`K`8``",
+"```L`Z.`...#.a.b.c.d.e.f.g.h.i.j`Y``",
+"```L.k.l.m.n.o.p.q.r.s.t.r.u.v.w.x.y",
+"```L`Z.z.A``.B.C.D.E.F.G.H.I.J.K.L.M",
+"```L.N.O.P.Q.R.S.T.U``````````.V.W.X",
+"```L.N.Y``.Z.0.1.2.3.4.5.5.5.4.6.7.8",
+"```L#`#.###a#b#c#d#e#f#g#g#g#f#h#i#j",
+"```L#k#l#m#n#o#p#q#r#s#t#u#v#w#x#y#z",
+"```L#k#A#B#C#D#E#F#G#H#I#J#K#L#M#N#O",
+"```L#P#Q#R#S#T#U#V#W#X#Y#Z#0#1#2#3#4",
+"```j#5#f#6#7#7#8a`a.a#aaabacadaeafag",
+"``ahaiajakalamanaoapaqarasatauavawax",
+"``````````````ayazaAaBaCaDaEaFaGaHaI"
+};
