@@ -1,3 +1,7 @@
+2010-09-25  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-toolbar.el: Improve remember toolbar setting.
+
 2010-09-22  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el (global-map): Setup dired-x.
